--- a/client-app/src/components/time-management-matrix/matrix-grid/matrix-grid.css
+++ b/client-app/src/components/time-management-matrix/matrix-grid/matrix-grid.css
@@ -3,9 +3,12 @@
 }
 
 .container {
-  margin: 30px 0px 0px 30px;
-  width:calc(100vw - 60px - var(--sidemenu-width));
-  height:calc(100vh - var(--header-height) - var(--footer-height) - 70px);
+  /* margin: 30px 0px 0px 30px; */
+  padding: 30px;
+  /*80px = 2*30px (padding) + 20px (col gap) */
+  width:calc(100vw - 80px - var(--sidemenu-width));
+  /*80px = 2*30px (padding) + 20px (row gap) */
+  height:calc(100vh - 80px - var(--header-height) - var(--footer-height));
   background-color:#f1f1f1;
   display:grid;
   grid-template-columns: 1fr 1fr;
@@ -22,30 +25,28 @@
 
 .horizontalAxe .high {
   position: absolute;
-  top: 10px;
+  top: 5px;
   left: calc(var(--sidemenu-width) + 40px);
 }
 
 .horizontalAxe .low {
   position: absolute;
-  top: 10px;
+  top: 5px;
   left: calc((100vw - var(--sidemenu-width))/2 + var(--sidemenu-width) + 20px);
 }
 
 .verticalAxe .high {
   position: absolute;
-  left: calc(var(--sidemenu-width) + 10px);
-  top: calc(50px + var(--header-height));
+  left: calc(var(--sidemenu-width) + 5px);
+  top: calc(var(--header-height) + 100px);
   writing-mode: vertical-rl;
-  text-orientation: mixed;
 }
 
 .verticalAxe .low {
   position: absolute;
-  left: calc(var(--sidemenu-width) + 10px);
+  left: calc(var(--sidemenu-width) + 5px);
   top: calc((100vh - var(--header-height) - var(--footer-height))/2 + 40px);
   writing-mode: vertical-rl;
-  text-orientation: mixed;
 }
 
 /* .box{
