--- a/client-app/src/components/time-management-matrix/task-list/task-list.css
+++ b/client-app/src/components/time-management-matrix/task-list/task-list.css
@@ -7,8 +7,12 @@
   padding: 10px;
   background-color: var(--task-list-background-color);
   min-height: 400px;
+  height: calc(100vh - var(--header-height) - var(--footer-height) - 250px);
   font-weight: normal;
   border: solid 1px black;
+  display:flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .showHighlight {
